--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,6 @@ dependencies {
     implementation files('libs/jsfml.jar')
 }
 
-test {
-    useJUnitPlatform()
+application {
+    mainClass = 'com.CGD.Main'
 }
